bin/stderr.log
Traceback (most recent call last):
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 2, in <module>
    from utils import db
ImportError: No module named utils
Traceback (most recent call last):
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 2, in <module>
    from utils import db
ImportError: No module named utils
Traceback (most recent call last):
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 2, in <module>
    from utils import db
ImportError: No module named utils
Traceback (most recent call last):
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 2, in <module>
    from .. utils import db
ValueError: Attempted relative import in non-package
Traceback (most recent call last):
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 2, in <module>
    from .. utils import db
ValueError: Attempted relative import in non-package
Traceback (most recent call last):
Traceback (most recent call last):
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 2, in <module>
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 2, in <module>
    from ..utils import db
ValueError: Attempted relative import in non-package
    from ..utils import db
ValueError: Attempted relative import in non-package
Traceback (most recent call last):
Traceback (most recent call last):
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 6, in <module>
    from ..utils import db
ValueError: Attempted relative import in non-package
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 6, in <module>
    from ..utils import db
ValueError: Attempted relative import in non-package
Traceback (most recent call last):
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 7, in <module>
    from ..utils import db
Traceback (most recent call last):
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 7, in <module>
ValueError: Attempted relative import in non-package
    from ..utils import db
ValueError: Attempted relative import in non-package
Traceback (most recent call last):
Traceback (most recent call last):
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 7, in <module>
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 7, in <module>
    from ..utils import db
    from ..utils import db
ValueError: Attempted relative import in non-packageValueError
: Attempted relative import in non-package
Traceback (most recent call last):
Traceback (most recent call last):
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 7, in <module>
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 7, in <module>
    from ..utils import db
    ValueErrorfrom ..utils import db
: Attempted relative import in non-package
ValueError: Attempted relative import in non-package
Traceback (most recent call last):
Traceback (most recent call last):
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 7, in <module>
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 7, in <module>
        from ..utils import db
from ..utils import db
ValueErrorValueError: : Attempted relative import in non-packageAttempted relative import in non-package

Traceback (most recent call last):
Traceback (most recent call last):
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 4, in <module>
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 4, in <module>
        from .. import db
from .. import db
ValueErrorValueError: : Attempted relative import in non-packageAttempted relative import in non-package

  File "  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line /Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py4", line 
4    
from .. import utils.db
        from .. import utils.db
                    ^
SyntaxError: invalid syntax
                        ^
SyntaxError: invalid syntax
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 4
    from .. import utils.db
                        ^
SyntaxError: invalid syntax
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 4
    from .. import utils.db
                        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
Traceback (most recent call last):
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 4, in <module>
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 4, in <module>
    from .. import db
ValueError:     from .. import db
Attempted relative import in non-package
ValueError: Attempted relative import in non-package
Traceback (most recent call last):
Traceback (most recent call last):
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 4, in <module>
  File "/Users/jawerty/Documents/projects/strawberri.tv/bin/pushURL.py", line 4, in <module>
    from .. import db
    from .. import db
ValueError: ValueErrorAttempted relative import in non-package: 
Attempted relative import in non-package
/bin/sh: /Users/jawerty/Documents/projects/strawberri.tv/venv/bin/python: No such file or directory
/bin/sh: /Users/jawerty/Documents/projects/strawberri.tv/venv/bin/python: No such file or directory
